// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login component Should display error when there is one 1`] = `
"<body
  style=\\"padding-right: 1024px; overflow: hidden;\\"
>
  <div
    aria-hidden=\\"true\\"
    id=\\"root\\"
  />
  <div
    aria-hidden=\\"true\\"
    id=\\"root\\"
  />
  <div
    aria-hidden=\\"true\\"
    id=\\"root\\"
  />
  <div
    aria-hidden=\\"true\\"
    id=\\"root\\"
  />
  <div
    aria-hidden=\\"true\\"
    id=\\"root\\"
  />
  <div
    aria-hidden=\\"true\\"
    id=\\"root\\"
  />
  <div
    aria-hidden=\\"true\\"
  >
    <div>
      <button
        aria-label=\\"options\\"
        class=\\"MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root\\"
        style=\\"background-color: white; color: black;\\"
        tabindex=\\"0\\"
        type=\\"button\\"
      >
        <svg
          aria-hidden=\\"true\\"
          class=\\"MuiSvgIcon-root MuiSvgIcon-colorWhite MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root\\"
          data-testid=\\"PersonIcon\\"
          focusable=\\"false\\"
          viewBox=\\"0 0 24 24\\"
        >
          <path
            d=\\"M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4m0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4\\"
          />
        </svg>
        <span
          class=\\"MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root\\"
        />
      </button>
    </div>
  </div>
  <div
    class=\\"MuiDialog-root MuiModal-root css-zw3mfo-MuiModal-root-MuiDialog-root\\"
    role=\\"presentation\\"
  >
    <div
      aria-hidden=\\"true\\"
      class=\\"MuiBackdrop-root MuiModal-backdrop css-yiavyu-MuiBackdrop-root-MuiDialog-backdrop\\"
      style=\\"opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;\\"
    />
    <div
      data-testid=\\"sentinelStart\\"
      tabindex=\\"0\\"
    />
    <div
      class=\\"MuiDialog-container MuiDialog-scrollPaper css-hz1bth-MuiDialog-container\\"
      role=\\"presentation\\"
      style=\\"opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;\\"
      tabindex=\\"-1\\"
    >
      <div
        aria-labelledby=\\":r5:\\"
        class=\\"MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthSm css-rnv4d6-MuiPaper-root-MuiDialog-paper\\"
        role=\\"dialog\\"
      >
        <h2
          class=\\"MuiTypography-root MuiTypography-h6 MuiDialogTitle-root css-bdhsul-MuiTypography-root-MuiDialogTitle-root\\"
          id=\\":r5:\\"
          style=\\"color: white; font-size: 14px; padding-top: 5px; padding-bottom: 5px; text-align: center;\\"
        >
           
          test@test.org
           
        </h2>
        <h2
          class=\\"MuiTypography-root MuiTypography-h6 MuiDialogTitle-root css-bdhsul-MuiTypography-root-MuiDialogTitle-root\\"
          id=\\":r5:\\"
          style=\\"color: white; font-size: 14px; padding-top: 5px; padding-bottom: 0px; text-align: center;\\"
        >
           
          dummy
           
        </h2>
        <button
          aria-label=\\"logout\\"
          class=\\"MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-173q8n9-MuiButtonBase-root-MuiButton-root\\"
          margin=\\"calc(max(24px,(100% - 220px) /2))\\"
          style=\\"margin-bottom: 16px;\\"
          tabindex=\\"0\\"
          target=\\"_blank\\"
          type=\\"button\\"
        >
          <span
            class=\\"MuiButton-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon\\"
          >
            <svg
              aria-hidden=\\"true\\"
              class=\\"MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root\\"
              data-testid=\\"LogoutIcon\\"
              focusable=\\"false\\"
              style=\\"height: 18px; width: 18px; color: white;\\"
              viewBox=\\"0 0 24 24\\"
            >
              <path
                d=\\"m17 7-1.41 1.41L18.17 11H8v2h10.17l-2.58 2.58L17 17l5-5zM4 5h8V3H4c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h8v-2H4z\\"
              />
            </svg>
          </span>
          Log out
          <span
            class=\\"MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root\\"
          />
        </button>
      </div>
    </div>
    <div
      data-testid=\\"sentinelEnd\\"
      tabindex=\\"0\\"
    />
  </div>
</body>"
`;

exports[`Login component Should display join options when registration is open 1`] = `
"<body
  style=\\"padding-right: 1024px; overflow: hidden;\\"
>
  <div
    aria-hidden=\\"true\\"
    id=\\"root\\"
  />
  <div
    aria-hidden=\\"true\\"
    id=\\"root\\"
  />
  <div
    aria-hidden=\\"true\\"
    id=\\"root\\"
  />
  <div
    aria-hidden=\\"true\\"
    id=\\"root\\"
  />
  <div
    aria-hidden=\\"true\\"
  >
    <div>
      <button
        aria-label=\\"options\\"
        class=\\"MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root\\"
        style=\\"background-color: white; color: black;\\"
        tabindex=\\"0\\"
        type=\\"button\\"
      >
        <svg
          aria-hidden=\\"true\\"
          class=\\"MuiSvgIcon-root MuiSvgIcon-colorWhite MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root\\"
          data-testid=\\"LoginIcon\\"
          focusable=\\"false\\"
          viewBox=\\"0 0 24 24\\"
        >
          <path
            d=\\"M11 7 9.6 8.4l2.6 2.6H2v2h10.2l-2.6 2.6L11 17l5-5zm9 12h-8v2h8c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-8v2h8z\\"
          />
        </svg>
        <span
          class=\\"MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root\\"
        />
      </button>
    </div>
  </div>
  <div
    class=\\"MuiDialog-root MuiModal-root css-zw3mfo-MuiModal-root-MuiDialog-root\\"
    role=\\"presentation\\"
  >
    <div
      aria-hidden=\\"true\\"
      class=\\"MuiBackdrop-root MuiModal-backdrop css-yiavyu-MuiBackdrop-root-MuiDialog-backdrop\\"
      style=\\"opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;\\"
    />
    <div
      data-testid=\\"sentinelStart\\"
      tabindex=\\"0\\"
    />
    <div
      class=\\"MuiDialog-container MuiDialog-scrollPaper css-hz1bth-MuiDialog-container\\"
      role=\\"presentation\\"
      style=\\"opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;\\"
      tabindex=\\"-1\\"
    >
      <div
        aria-labelledby=\\":r3:\\"
        class=\\"MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthSm css-rnv4d6-MuiPaper-root-MuiDialog-paper\\"
        role=\\"dialog\\"
      >
        <a
          aria-label=\\"registration\\"
          class=\\"MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-173q8n9-MuiButtonBase-root-MuiButton-root\\"
          href=\\"https://google.com\\"
          margin=\\"calc(max(24px,(100% - 220px) /2))\\"
          tabindex=\\"0\\"
          target=\\"_blank\\"
        >
          <span
            class=\\"MuiButton-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon\\"
          >
            <svg
              aria-hidden=\\"true\\"
              class=\\"MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root\\"
              data-testid=\\"AppRegistrationIcon\\"
              focusable=\\"false\\"
              style=\\"height: 18px; width: 18px; color: white;\\"
              viewBox=\\"0 0 24 24\\"
            >
              <path
                d=\\"M10 4h4v4h-4zM4 16h4v4H4zm0-6h4v4H4zm0-6h4v4H4zm10 8.42V10h-4v4h2.42zm6.88-1.13-1.17-1.17c-.16-.16-.42-.16-.58 0l-.88.88L20 12.75l.88-.88c.16-.16.16-.42 0-.58M11 18.25V20h1.75l6.67-6.67-1.75-1.75zM16 4h4v4h-4z\\"
              />
            </svg>
          </span>
          Join
          <span
            class=\\"MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root\\"
          />
        </a>
        <button
          aria-label=\\"registration\\"
          class=\\"MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-173q8n9-MuiButtonBase-root-MuiButton-root\\"
          margin=\\"calc(max(24px,(100% - 220px) /2))\\"
          tabindex=\\"0\\"
          target=\\"_blank\\"
          type=\\"button\\"
        >
          <span
            class=\\"MuiButton-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon\\"
          >
            <svg
              aria-hidden=\\"true\\"
              class=\\"MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root\\"
              data-testid=\\"EmailIcon\\"
              focusable=\\"false\\"
              style=\\"height: 18px; width: 18px; color: white;\\"
              viewBox=\\"0 0 24 24\\"
            >
              <path
                d=\\"M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2m0 4-8 5-8-5V6l8 5 8-5z\\"
              />
            </svg>
          </span>
          Sign in with email
          <span
            class=\\"MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root\\"
          />
        </button>
        <button
          aria-label=\\"registration\\"
          class=\\"MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-173q8n9-MuiButtonBase-root-MuiButton-root\\"
          margin=\\"calc(max(24px,(100% - 220px) /2))\\"
          style=\\"margin-bottom: 16px;\\"
          tabindex=\\"0\\"
          target=\\"_blank\\"
          type=\\"button\\"
        >
          <span
            class=\\"MuiButton-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon\\"
          >
            <svg
              aria-hidden=\\"true\\"
              class=\\"MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root\\"
              data-testid=\\"GoogleIcon\\"
              focusable=\\"false\\"
              style=\\"height: 18px; width: 18px; color: white;\\"
              viewBox=\\"0 0 24 24\\"
            >
              <path
                d=\\"M12.545,10.239v3.821h5.445c-0.712,2.315-2.647,3.972-5.445,3.972c-3.332,0-6.033-2.701-6.033-6.032s2.701-6.032,6.033-6.032c1.498,0,2.866,0.549,3.921,1.453l2.814-2.814C17.503,2.988,15.139,2,12.545,2C7.021,2,2.543,6.477,2.543,12s4.478,10,10.002,10c8.396,0,10.249-7.85,9.426-11.748L12.545,10.239z\\"
              />
            </svg>
          </span>
          Sign in with Google
          <span
            class=\\"MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root\\"
          />
        </button>
        <p
          class=\\"MuiTypography-root MuiTypography-body1 css-15v4sip-MuiTypography-root\\"
          style=\\"font-size: 10px;\\"
        >
          By continuing, you are indicating that you accept our 
          <a
            class=\\"MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-uzv0uc-MuiTypography-root-MuiLink-root\\"
            href=\\"/terms\\"
          >
            Terms of Service
          </a>
           and 
          <a
            class=\\"MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-uzv0uc-MuiTypography-root-MuiLink-root\\"
            href=\\"/policy\\"
          >
            Privacy Policy
          </a>
        </p>
        <div
          id=\\"firebaseui-auth-container\\"
        />
      </div>
    </div>
    <div
      data-testid=\\"sentinelEnd\\"
      tabindex=\\"0\\"
    />
  </div>
</body>"
`;

exports[`Login component Should display join options when registration is open 2`] = `
"<body
  style=\\"padding-right: 1024px; overflow: hidden;\\"
>
  <div
    aria-hidden=\\"true\\"
    id=\\"root\\"
  />
  <div
    aria-hidden=\\"true\\"
    id=\\"root\\"
  />
  <div
    aria-hidden=\\"true\\"
    id=\\"root\\"
  />
  <div
    aria-hidden=\\"true\\"
    id=\\"root\\"
  />
  <div
    aria-hidden=\\"true\\"
  >
    <div>
      <button
        aria-label=\\"options\\"
        class=\\"MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root\\"
        style=\\"background-color: white; color: black;\\"
        tabindex=\\"0\\"
        type=\\"button\\"
      >
        <svg
          aria-hidden=\\"true\\"
          class=\\"MuiSvgIcon-root MuiSvgIcon-colorWhite MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root\\"
          data-testid=\\"LoginIcon\\"
          focusable=\\"false\\"
          viewBox=\\"0 0 24 24\\"
        >
          <path
            d=\\"M11 7 9.6 8.4l2.6 2.6H2v2h10.2l-2.6 2.6L11 17l5-5zm9 12h-8v2h8c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-8v2h8z\\"
          />
        </svg>
        <span
          class=\\"MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root\\"
        />
      </button>
    </div>
  </div>
  <div
    class=\\"MuiDialog-root MuiModal-root css-zw3mfo-MuiModal-root-MuiDialog-root\\"
    role=\\"presentation\\"
  >
    <div
      aria-hidden=\\"true\\"
      class=\\"MuiBackdrop-root MuiModal-backdrop css-yiavyu-MuiBackdrop-root-MuiDialog-backdrop\\"
      style=\\"opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;\\"
    />
    <div
      data-testid=\\"sentinelStart\\"
      tabindex=\\"0\\"
    />
    <div
      class=\\"MuiDialog-container MuiDialog-scrollPaper css-hz1bth-MuiDialog-container\\"
      role=\\"presentation\\"
      style=\\"opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;\\"
      tabindex=\\"-1\\"
    >
      <div
        aria-labelledby=\\":r3:\\"
        class=\\"MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthSm css-rnv4d6-MuiPaper-root-MuiDialog-paper\\"
        role=\\"dialog\\"
      >
        <a
          aria-label=\\"registration\\"
          class=\\"MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-173q8n9-MuiButtonBase-root-MuiButton-root\\"
          href=\\"https://google.com\\"
          margin=\\"calc(max(24px,(100% - 220px) /2))\\"
          tabindex=\\"0\\"
          target=\\"_blank\\"
        >
          <span
            class=\\"MuiButton-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon\\"
          >
            <svg
              aria-hidden=\\"true\\"
              class=\\"MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root\\"
              data-testid=\\"AppRegistrationIcon\\"
              focusable=\\"false\\"
              style=\\"height: 18px; width: 18px; color: white;\\"
              viewBox=\\"0 0 24 24\\"
            >
              <path
                d=\\"M10 4h4v4h-4zM4 16h4v4H4zm0-6h4v4H4zm0-6h4v4H4zm10 8.42V10h-4v4h2.42zm6.88-1.13-1.17-1.17c-.16-.16-.42-.16-.58 0l-.88.88L20 12.75l.88-.88c.16-.16.16-.42 0-.58M11 18.25V20h1.75l6.67-6.67-1.75-1.75zM16 4h4v4h-4z\\"
              />
            </svg>
          </span>
          Join
          <span
            class=\\"MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root\\"
          />
        </a>
        <button
          aria-label=\\"registration\\"
          class=\\"MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-173q8n9-MuiButtonBase-root-MuiButton-root\\"
          margin=\\"calc(max(24px,(100% - 220px) /2))\\"
          tabindex=\\"0\\"
          target=\\"_blank\\"
          type=\\"button\\"
        >
          <span
            class=\\"MuiButton-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon\\"
          >
            <svg
              aria-hidden=\\"true\\"
              class=\\"MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root\\"
              data-testid=\\"EmailIcon\\"
              focusable=\\"false\\"
              style=\\"height: 18px; width: 18px; color: white;\\"
              viewBox=\\"0 0 24 24\\"
            >
              <path
                d=\\"M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2m0 4-8 5-8-5V6l8 5 8-5z\\"
              />
            </svg>
          </span>
          Sign in with email
          <span
            class=\\"MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root\\"
          />
        </button>
        <button
          aria-label=\\"registration\\"
          class=\\"MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-173q8n9-MuiButtonBase-root-MuiButton-root\\"
          margin=\\"calc(max(24px,(100% - 220px) /2))\\"
          style=\\"margin-bottom: 16px;\\"
          tabindex=\\"0\\"
          target=\\"_blank\\"
          type=\\"button\\"
        >
          <span
            class=\\"MuiButton-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon\\"
          >
            <svg
              aria-hidden=\\"true\\"
              class=\\"MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root\\"
              data-testid=\\"GoogleIcon\\"
              focusable=\\"false\\"
              style=\\"height: 18px; width: 18px; color: white;\\"
              viewBox=\\"0 0 24 24\\"
            >
              <path
                d=\\"M12.545,10.239v3.821h5.445c-0.712,2.315-2.647,3.972-5.445,3.972c-3.332,0-6.033-2.701-6.033-6.032s2.701-6.032,6.033-6.032c1.498,0,2.866,0.549,3.921,1.453l2.814-2.814C17.503,2.988,15.139,2,12.545,2C7.021,2,2.543,6.477,2.543,12s4.478,10,10.002,10c8.396,0,10.249-7.85,9.426-11.748L12.545,10.239z\\"
              />
            </svg>
          </span>
          Sign in with Google
          <span
            class=\\"MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root\\"
          />
        </button>
        <p
          class=\\"MuiTypography-root MuiTypography-body1 css-15v4sip-MuiTypography-root\\"
          style=\\"font-size: 10px;\\"
        >
          By continuing, you are indicating that you accept our 
          <a
            class=\\"MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-uzv0uc-MuiTypography-root-MuiLink-root\\"
            href=\\"/terms\\"
          >
            Terms of Service
          </a>
           and 
          <a
            class=\\"MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-uzv0uc-MuiTypography-root-MuiLink-root\\"
            href=\\"/policy\\"
          >
            Privacy Policy
          </a>
        </p>
        <div
          id=\\"firebaseui-auth-container\\"
        />
      </div>
    </div>
    <div
      data-testid=\\"sentinelEnd\\"
      tabindex=\\"0\\"
    />
  </div>
</body>"
`;

exports[`Login component Should display login button when not authenticated 1`] = `
"<body>
  <div
    id=\\"root\\"
  />
  <div>
    <div>
      <button
        aria-label=\\"options\\"
        class=\\"MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root\\"
        style=\\"background-color: white; color: black;\\"
        tabindex=\\"0\\"
        type=\\"button\\"
      >
        <svg
          aria-hidden=\\"true\\"
          class=\\"MuiSvgIcon-root MuiSvgIcon-colorWhite MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root\\"
          data-testid=\\"LoginIcon\\"
          focusable=\\"false\\"
          viewBox=\\"0 0 24 24\\"
        >
          <path
            d=\\"M11 7 9.6 8.4l2.6 2.6H2v2h10.2l-2.6 2.6L11 17l5-5zm9 12h-8v2h8c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-8v2h8z\\"
          />
        </svg>
        <span
          class=\\"MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root\\"
        />
      </button>
    </div>
  </div>
  <div
    aria-hidden=\\"true\\"
    class=\\"MuiDialog-root MuiModal-root MuiModal-hidden css-ew73zq-MuiModal-root-MuiDialog-root\\"
    role=\\"presentation\\"
  >
    <div
      aria-hidden=\\"true\\"
      class=\\"MuiBackdrop-root MuiModal-backdrop css-yiavyu-MuiBackdrop-root-MuiDialog-backdrop\\"
      style=\\"opacity: 0; visibility: hidden;\\"
    />
    <div
      data-testid=\\"sentinelStart\\"
      tabindex=\\"-1\\"
    />
    <div
      class=\\"MuiDialog-container MuiDialog-scrollPaper css-hz1bth-MuiDialog-container\\"
      role=\\"presentation\\"
      style=\\"opacity: 0; visibility: hidden;\\"
      tabindex=\\"-1\\"
    >
      <div
        aria-labelledby=\\":r0:\\"
        class=\\"MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthSm css-rnv4d6-MuiPaper-root-MuiDialog-paper\\"
        role=\\"dialog\\"
      >
        <button
          aria-label=\\"registration\\"
          class=\\"MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-173q8n9-MuiButtonBase-root-MuiButton-root\\"
          margin=\\"calc(max(24px,(100% - 220px) /2))\\"
          tabindex=\\"0\\"
          target=\\"_blank\\"
          type=\\"button\\"
        >
          <span
            class=\\"MuiButton-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon\\"
          >
            <svg
              aria-hidden=\\"true\\"
              class=\\"MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root\\"
              data-testid=\\"EmailIcon\\"
              focusable=\\"false\\"
              style=\\"height: 18px; width: 18px; color: white;\\"
              viewBox=\\"0 0 24 24\\"
            >
              <path
                d=\\"M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2m0 4-8 5-8-5V6l8 5 8-5z\\"
              />
            </svg>
          </span>
          Sign in with email
          <span
            class=\\"MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root\\"
          />
        </button>
        <button
          aria-label=\\"registration\\"
          class=\\"MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-173q8n9-MuiButtonBase-root-MuiButton-root\\"
          margin=\\"calc(max(24px,(100% - 220px) /2))\\"
          style=\\"margin-bottom: 16px;\\"
          tabindex=\\"0\\"
          target=\\"_blank\\"
          type=\\"button\\"
        >
          <span
            class=\\"MuiButton-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon\\"
          >
            <svg
              aria-hidden=\\"true\\"
              class=\\"MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root\\"
              data-testid=\\"GoogleIcon\\"
              focusable=\\"false\\"
              style=\\"height: 18px; width: 18px; color: white;\\"
              viewBox=\\"0 0 24 24\\"
            >
              <path
                d=\\"M12.545,10.239v3.821h5.445c-0.712,2.315-2.647,3.972-5.445,3.972c-3.332,0-6.033-2.701-6.033-6.032s2.701-6.032,6.033-6.032c1.498,0,2.866,0.549,3.921,1.453l2.814-2.814C17.503,2.988,15.139,2,12.545,2C7.021,2,2.543,6.477,2.543,12s4.478,10,10.002,10c8.396,0,10.249-7.85,9.426-11.748L12.545,10.239z\\"
              />
            </svg>
          </span>
          Sign in with Google
          <span
            class=\\"MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root\\"
          />
        </button>
        <p
          class=\\"MuiTypography-root MuiTypography-body1 css-15v4sip-MuiTypography-root\\"
          style=\\"font-size: 10px;\\"
        >
          By continuing, you are indicating that you accept our 
          <a
            class=\\"MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-uzv0uc-MuiTypography-root-MuiLink-root\\"
            href=\\"/terms\\"
          >
            Terms of Service
          </a>
           and 
          <a
            class=\\"MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-uzv0uc-MuiTypography-root-MuiLink-root\\"
            href=\\"/policy\\"
          >
            Privacy Policy
          </a>
        </p>
        <div
          id=\\"firebaseui-auth-container\\"
        />
      </div>
    </div>
    <div
      data-testid=\\"sentinelEnd\\"
      tabindex=\\"-1\\"
    />
  </div>
</body>"
`;

exports[`Login component Should display login options when not authenticated 1`] = `
"<body
  style=\\"padding-right: 1024px; overflow: hidden;\\"
>
  <div
    aria-hidden=\\"true\\"
    id=\\"root\\"
  />
  <div
    aria-hidden=\\"true\\"
    id=\\"root\\"
  />
  <div
    aria-hidden=\\"true\\"
    id=\\"root\\"
  />
  <div
    aria-hidden=\\"true\\"
  >
    <div>
      <button
        aria-label=\\"options\\"
        class=\\"MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root\\"
        style=\\"background-color: white; color: black;\\"
        tabindex=\\"0\\"
        type=\\"button\\"
      >
        <svg
          aria-hidden=\\"true\\"
          class=\\"MuiSvgIcon-root MuiSvgIcon-colorWhite MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root\\"
          data-testid=\\"LoginIcon\\"
          focusable=\\"false\\"
          viewBox=\\"0 0 24 24\\"
        >
          <path
            d=\\"M11 7 9.6 8.4l2.6 2.6H2v2h10.2l-2.6 2.6L11 17l5-5zm9 12h-8v2h8c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-8v2h8z\\"
          />
        </svg>
        <span
          class=\\"MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root\\"
        />
      </button>
    </div>
  </div>
  <div
    class=\\"MuiDialog-root MuiModal-root css-zw3mfo-MuiModal-root-MuiDialog-root\\"
    role=\\"presentation\\"
  >
    <div
      aria-hidden=\\"true\\"
      class=\\"MuiBackdrop-root MuiModal-backdrop css-yiavyu-MuiBackdrop-root-MuiDialog-backdrop\\"
      style=\\"opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;\\"
    />
    <div
      data-testid=\\"sentinelStart\\"
      tabindex=\\"0\\"
    />
    <div
      class=\\"MuiDialog-container MuiDialog-scrollPaper css-hz1bth-MuiDialog-container\\"
      role=\\"presentation\\"
      style=\\"opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;\\"
      tabindex=\\"-1\\"
    >
      <div
        aria-labelledby=\\":r2:\\"
        class=\\"MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthSm css-rnv4d6-MuiPaper-root-MuiDialog-paper\\"
        role=\\"dialog\\"
      >
        <button
          aria-label=\\"registration\\"
          class=\\"MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-173q8n9-MuiButtonBase-root-MuiButton-root\\"
          margin=\\"calc(max(24px,(100% - 220px) /2))\\"
          tabindex=\\"0\\"
          target=\\"_blank\\"
          type=\\"button\\"
        >
          <span
            class=\\"MuiButton-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon\\"
          >
            <svg
              aria-hidden=\\"true\\"
              class=\\"MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root\\"
              data-testid=\\"EmailIcon\\"
              focusable=\\"false\\"
              style=\\"height: 18px; width: 18px; color: white;\\"
              viewBox=\\"0 0 24 24\\"
            >
              <path
                d=\\"M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2m0 4-8 5-8-5V6l8 5 8-5z\\"
              />
            </svg>
          </span>
          Sign in with email
          <span
            class=\\"MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root\\"
          />
        </button>
        <button
          aria-label=\\"registration\\"
          class=\\"MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-173q8n9-MuiButtonBase-root-MuiButton-root\\"
          margin=\\"calc(max(24px,(100% - 220px) /2))\\"
          style=\\"margin-bottom: 16px;\\"
          tabindex=\\"0\\"
          target=\\"_blank\\"
          type=\\"button\\"
        >
          <span
            class=\\"MuiButton-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon\\"
          >
            <svg
              aria-hidden=\\"true\\"
              class=\\"MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root\\"
              data-testid=\\"GoogleIcon\\"
              focusable=\\"false\\"
              style=\\"height: 18px; width: 18px; color: white;\\"
              viewBox=\\"0 0 24 24\\"
            >
              <path
                d=\\"M12.545,10.239v3.821h5.445c-0.712,2.315-2.647,3.972-5.445,3.972c-3.332,0-6.033-2.701-6.033-6.032s2.701-6.032,6.033-6.032c1.498,0,2.866,0.549,3.921,1.453l2.814-2.814C17.503,2.988,15.139,2,12.545,2C7.021,2,2.543,6.477,2.543,12s4.478,10,10.002,10c8.396,0,10.249-7.85,9.426-11.748L12.545,10.239z\\"
              />
            </svg>
          </span>
          Sign in with Google
          <span
            class=\\"MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root\\"
          />
        </button>
        <p
          class=\\"MuiTypography-root MuiTypography-body1 css-15v4sip-MuiTypography-root\\"
          style=\\"font-size: 10px;\\"
        >
          By continuing, you are indicating that you accept our 
          <a
            class=\\"MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-uzv0uc-MuiTypography-root-MuiLink-root\\"
            href=\\"/terms\\"
          >
            Terms of Service
          </a>
           and 
          <a
            class=\\"MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-uzv0uc-MuiTypography-root-MuiLink-root\\"
            href=\\"/policy\\"
          >
            Privacy Policy
          </a>
        </p>
        <div
          id=\\"firebaseui-auth-container\\"
        />
      </div>
    </div>
    <div
      data-testid=\\"sentinelEnd\\"
      tabindex=\\"0\\"
    />
  </div>
</body>"
`;

exports[`Login component Should display user button when authenticated 1`] = `
"<body>
  <div
    id=\\"root\\"
  />
  <div
    id=\\"root\\"
  />
  <div>
    <div>
      <button
        aria-label=\\"options\\"
        class=\\"MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root\\"
        style=\\"background-color: white; color: black;\\"
        tabindex=\\"0\\"
        type=\\"button\\"
      >
        <svg
          aria-hidden=\\"true\\"
          class=\\"MuiSvgIcon-root MuiSvgIcon-colorWhite MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root\\"
          data-testid=\\"PersonIcon\\"
          focusable=\\"false\\"
          viewBox=\\"0 0 24 24\\"
        >
          <path
            d=\\"M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4m0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4\\"
          />
        </svg>
        <span
          class=\\"MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root\\"
        />
      </button>
    </div>
  </div>
  <div
    aria-hidden=\\"true\\"
    class=\\"MuiDialog-root MuiModal-root MuiModal-hidden css-ew73zq-MuiModal-root-MuiDialog-root\\"
    role=\\"presentation\\"
  >
    <div
      aria-hidden=\\"true\\"
      class=\\"MuiBackdrop-root MuiModal-backdrop css-yiavyu-MuiBackdrop-root-MuiDialog-backdrop\\"
      style=\\"opacity: 0; visibility: hidden;\\"
    />
    <div
      data-testid=\\"sentinelStart\\"
      tabindex=\\"-1\\"
    />
    <div
      class=\\"MuiDialog-container MuiDialog-scrollPaper css-hz1bth-MuiDialog-container\\"
      role=\\"presentation\\"
      style=\\"opacity: 0; visibility: hidden;\\"
      tabindex=\\"-1\\"
    >
      <div
        aria-labelledby=\\":r1:\\"
        class=\\"MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthSm css-rnv4d6-MuiPaper-root-MuiDialog-paper\\"
        role=\\"dialog\\"
      >
        <h2
          class=\\"MuiTypography-root MuiTypography-h6 MuiDialogTitle-root css-bdhsul-MuiTypography-root-MuiDialogTitle-root\\"
          id=\\":r1:\\"
          style=\\"color: white; font-size: 14px; padding-top: 5px; padding-bottom: 5px; text-align: center;\\"
        >
           
          test@test.org
           
        </h2>
        <h2
          class=\\"MuiTypography-root MuiTypography-h6 MuiDialogTitle-root css-bdhsul-MuiTypography-root-MuiDialogTitle-root\\"
          id=\\":r1:\\"
          style=\\"color: white; font-size: 14px; padding-top: 5px; padding-bottom: 0px; text-align: center;\\"
        >
           
          dummy
           
        </h2>
        <button
          aria-label=\\"logout\\"
          class=\\"MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-173q8n9-MuiButtonBase-root-MuiButton-root\\"
          margin=\\"calc(max(24px,(100% - 220px) /2))\\"
          style=\\"margin-bottom: 16px;\\"
          tabindex=\\"0\\"
          target=\\"_blank\\"
          type=\\"button\\"
        >
          <span
            class=\\"MuiButton-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon\\"
          >
            <svg
              aria-hidden=\\"true\\"
              class=\\"MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root\\"
              data-testid=\\"LogoutIcon\\"
              focusable=\\"false\\"
              style=\\"height: 18px; width: 18px; color: white;\\"
              viewBox=\\"0 0 24 24\\"
            >
              <path
                d=\\"m17 7-1.41 1.41L18.17 11H8v2h10.17l-2.58 2.58L17 17l5-5zM4 5h8V3H4c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h8v-2H4z\\"
              />
            </svg>
          </span>
          Log out
          <span
            class=\\"MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root\\"
          />
        </button>
      </div>
    </div>
    <div
      data-testid=\\"sentinelEnd\\"
      tabindex=\\"-1\\"
    />
  </div>
</body>"
`;

exports[`Login component Should enable logout when user is authenticated 1`] = `
"<body
  style=\\"padding-right: 1024px; overflow: hidden;\\"
>
  <div
    aria-hidden=\\"true\\"
    id=\\"root\\"
  />
  <div
    aria-hidden=\\"true\\"
    id=\\"root\\"
  />
  <div
    aria-hidden=\\"true\\"
    id=\\"root\\"
  />
  <div
    aria-hidden=\\"true\\"
    id=\\"root\\"
  />
  <div
    aria-hidden=\\"true\\"
    id=\\"root\\"
  />
  <div
    aria-hidden=\\"true\\"
  >
    <div>
      <button
        aria-label=\\"options\\"
        class=\\"MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root\\"
        style=\\"background-color: white; color: black;\\"
        tabindex=\\"0\\"
        type=\\"button\\"
      >
        <svg
          aria-hidden=\\"true\\"
          class=\\"MuiSvgIcon-root MuiSvgIcon-colorWhite MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root\\"
          data-testid=\\"PersonIcon\\"
          focusable=\\"false\\"
          viewBox=\\"0 0 24 24\\"
        >
          <path
            d=\\"M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4m0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4\\"
          />
        </svg>
        <span
          class=\\"MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root\\"
        />
      </button>
    </div>
  </div>
  <div
    class=\\"MuiDialog-root MuiModal-root css-zw3mfo-MuiModal-root-MuiDialog-root\\"
    role=\\"presentation\\"
  >
    <div
      aria-hidden=\\"true\\"
      class=\\"MuiBackdrop-root MuiModal-backdrop css-yiavyu-MuiBackdrop-root-MuiDialog-backdrop\\"
      style=\\"opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;\\"
    />
    <div
      data-testid=\\"sentinelStart\\"
      tabindex=\\"0\\"
    />
    <div
      class=\\"MuiDialog-container MuiDialog-scrollPaper css-hz1bth-MuiDialog-container\\"
      role=\\"presentation\\"
      style=\\"opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;\\"
      tabindex=\\"-1\\"
    >
      <div
        aria-labelledby=\\":r4:\\"
        class=\\"MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthSm css-rnv4d6-MuiPaper-root-MuiDialog-paper\\"
        role=\\"dialog\\"
      >
        <h2
          class=\\"MuiTypography-root MuiTypography-h6 MuiDialogTitle-root css-bdhsul-MuiTypography-root-MuiDialogTitle-root\\"
          id=\\":r4:\\"
          style=\\"color: white; font-size: 14px; padding-top: 5px; padding-bottom: 5px; text-align: center;\\"
        >
           
          test@test.org
           
        </h2>
        <h2
          class=\\"MuiTypography-root MuiTypography-h6 MuiDialogTitle-root css-bdhsul-MuiTypography-root-MuiDialogTitle-root\\"
          id=\\":r4:\\"
          style=\\"color: white; font-size: 14px; padding-top: 5px; padding-bottom: 0px; text-align: center;\\"
        >
           
          dummy
           
        </h2>
        <button
          aria-label=\\"logout\\"
          class=\\"MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-173q8n9-MuiButtonBase-root-MuiButton-root\\"
          margin=\\"calc(max(24px,(100% - 220px) /2))\\"
          style=\\"margin-bottom: 16px;\\"
          tabindex=\\"0\\"
          target=\\"_blank\\"
          type=\\"button\\"
        >
          <span
            class=\\"MuiButton-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon\\"
          >
            <svg
              aria-hidden=\\"true\\"
              class=\\"MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root\\"
              data-testid=\\"LogoutIcon\\"
              focusable=\\"false\\"
              style=\\"height: 18px; width: 18px; color: white;\\"
              viewBox=\\"0 0 24 24\\"
            >
              <path
                d=\\"m17 7-1.41 1.41L18.17 11H8v2h10.17l-2.58 2.58L17 17l5-5zM4 5h8V3H4c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h8v-2H4z\\"
              />
            </svg>
          </span>
          Log out
          <span
            class=\\"MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root\\"
          />
        </button>
      </div>
    </div>
    <div
      data-testid=\\"sentinelEnd\\"
      tabindex=\\"0\\"
    />
  </div>
</body>"
`;

exports[`Login component Should enable logout when user is authenticated 2`] = `
"<body
  style=\\"padding-right: 1024px; overflow: hidden;\\"
>
  <div
    aria-hidden=\\"true\\"
    id=\\"root\\"
  />
  <div
    aria-hidden=\\"true\\"
    id=\\"root\\"
  />
  <div
    aria-hidden=\\"true\\"
    id=\\"root\\"
  />
  <div
    aria-hidden=\\"true\\"
    id=\\"root\\"
  />
  <div
    aria-hidden=\\"true\\"
    id=\\"root\\"
  />
  <div
    aria-hidden=\\"true\\"
  >
    <div>
      <button
        aria-label=\\"options\\"
        class=\\"MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root\\"
        style=\\"background-color: white; color: black;\\"
        tabindex=\\"0\\"
        type=\\"button\\"
      >
        <svg
          aria-hidden=\\"true\\"
          class=\\"MuiSvgIcon-root MuiSvgIcon-colorWhite MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root\\"
          data-testid=\\"PersonIcon\\"
          focusable=\\"false\\"
          viewBox=\\"0 0 24 24\\"
        >
          <path
            d=\\"M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4m0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4\\"
          />
        </svg>
        <span
          class=\\"MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root\\"
        />
      </button>
    </div>
  </div>
  <div
    class=\\"MuiDialog-root MuiModal-root css-zw3mfo-MuiModal-root-MuiDialog-root\\"
    role=\\"presentation\\"
  >
    <div
      aria-hidden=\\"true\\"
      class=\\"MuiBackdrop-root MuiModal-backdrop css-yiavyu-MuiBackdrop-root-MuiDialog-backdrop\\"
      style=\\"opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;\\"
    />
    <div
      data-testid=\\"sentinelStart\\"
      tabindex=\\"0\\"
    />
    <div
      class=\\"MuiDialog-container MuiDialog-scrollPaper css-hz1bth-MuiDialog-container\\"
      role=\\"presentation\\"
      style=\\"opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;\\"
      tabindex=\\"-1\\"
    >
      <div
        aria-labelledby=\\":r4:\\"
        class=\\"MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthSm css-rnv4d6-MuiPaper-root-MuiDialog-paper\\"
        role=\\"dialog\\"
      >
        <h2
          class=\\"MuiTypography-root MuiTypography-h6 MuiDialogTitle-root css-bdhsul-MuiTypography-root-MuiDialogTitle-root\\"
          id=\\":r4:\\"
          style=\\"color: white; font-size: 14px; padding-top: 5px; padding-bottom: 5px; text-align: center;\\"
        >
           
          test@test.org
           
        </h2>
        <h2
          class=\\"MuiTypography-root MuiTypography-h6 MuiDialogTitle-root css-bdhsul-MuiTypography-root-MuiDialogTitle-root\\"
          id=\\":r4:\\"
          style=\\"color: white; font-size: 14px; padding-top: 5px; padding-bottom: 0px; text-align: center;\\"
        >
           
          dummy
           
        </h2>
        <button
          aria-label=\\"logout\\"
          class=\\"MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-173q8n9-MuiButtonBase-root-MuiButton-root\\"
          margin=\\"calc(max(24px,(100% - 220px) /2))\\"
          style=\\"margin-bottom: 16px;\\"
          tabindex=\\"0\\"
          target=\\"_blank\\"
          type=\\"button\\"
        >
          <span
            class=\\"MuiButton-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon\\"
          >
            <svg
              aria-hidden=\\"true\\"
              class=\\"MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root\\"
              data-testid=\\"LogoutIcon\\"
              focusable=\\"false\\"
              style=\\"height: 18px; width: 18px; color: white;\\"
              viewBox=\\"0 0 24 24\\"
            >
              <path
                d=\\"m17 7-1.41 1.41L18.17 11H8v2h10.17l-2.58 2.58L17 17l5-5zM4 5h8V3H4c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h8v-2H4z\\"
              />
            </svg>
          </span>
          Log out
          <span
            class=\\"MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root\\"
          />
        </button>
      </div>
    </div>
    <div
      data-testid=\\"sentinelEnd\\"
      tabindex=\\"0\\"
    />
  </div>
</body>"
`;
